$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------

- update ISC patch for dnsmasq 2.60

- add possibility to modify wpa_group_rekey value
  (via config only: wlans -> wlan -> wpa -> grouprekey = interval in seconds)

- fix scheduler ignore empty array jobset

- fix scheduler delete jobset if no defined job left

- move scheduler functions in services.inc to new include scheduler.inc
- scheduler jobs will now be updated if their targets have been modified

- fix version of config.xml
- minor tweaks of croen daemon

- rewrite croen daemon (scheduler) from scratch to handle more than one job at a time
  and do considerably less php calls
- delete obsolete job Enable/Disable WLAN
- disable undo feature for jobs
- add custom description for jobs
- add job Interface: Enable/Disable
  if all wlan child interfaces of a parent interface have been disabled the parent
  interface will also be brought down to save power
- add job Traffic Shaper: Enable/Disable
- add job Traffic Shaper: Enable/Disable rule
- add job Traffic Shaper: Set pipe bandwidth of a pipe
- add job Traffic Shaper: Set queue weight of a queue
- add job Execute command

- fix incorrect handling of UDP packets with zero checksum when hardware checksumming
  is enabled (corrects problems with Cisco VPN and potentially others)

- fix captive portal pass-thru MAC handling (could result in expired sessions not
  being pruned if using captive portal without MAC filtering, i.e. behind a router,
  when pass-thru MAC entries are also present or have been removed without restarting
  the captive portal)

- fix PHP build process to correctly build RADIUS module

- disable "reading /var/db/dhcpd.leases" log messages

- keep ngwan0 from appearing in interface assignment

- fix IPv6 link-local address configuration error in MPD when IPV6CP comes up after IPCP